Update 'os95v92zm-go' component image to: quay.io/jsmid/rhtap-qe:7f0d661a8f92eaccbe1f5f6d8c61f2ef99d6c447@sha256:7f1f24091ad58d0375fd070eab00fab0a2576c6e24056044be08e047ec69c48b

--- a/components/os95v92zm-go/overlays/development/deployment-patch.yaml
+++ b/components/os95v92zm-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: os95v92zm-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/jsmid/rhtap-qe:7f0d661a8f92eaccbe1f5f6d8c61f2ef99d6c447@sha256:7f1f24091ad58d0375fd070eab00fab0a2576c6e24056044be08e047ec69c48b
+          name: container-image
